--- a/CodeAdvisor/CodeAdvisor.csproj
+++ b/CodeAdvisor/CodeAdvisor.csproj
@@ -104,6 +104,12 @@
   <ItemGroup>
     <None Include="Resources\dialog_question.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\java_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\text_x_java.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
