--- a/CodeAdvisor/CodeAdvisor.csproj
+++ b/CodeAdvisor/CodeAdvisor.csproj
@@ -110,6 +110,12 @@
   <ItemGroup>
     <None Include="Resources\text_x_java.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\text_x_csharp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\text_x_csharp.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
