--- a/CodeAdvisor/CodeAdvisor.csproj
+++ b/CodeAdvisor/CodeAdvisor.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Supports\JavaUtils.cs" />
     <Compile Include="Supports\Utils.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
