--- a/CodeAdvisor/CodeAdvisor.csproj
+++ b/CodeAdvisor/CodeAdvisor.csproj
@@ -133,6 +133,12 @@
       <Name>SyntaxHighligher</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\start_here_gnome_blue.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
