integrated with server

--- a/CodeAdvisor/CodeAdvisor.csproj
+++ b/CodeAdvisor/CodeAdvisor.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Supports\ExceptionUtils.cs" />
     <Compile Include="Supports\JavaUtils.cs" />
     <Compile Include="Supports\RequestJSON.cs" />
+    <Compile Include="Supports\StackItem.cs" />
+    <Compile Include="Supports\StackUtils.cs" />
     <Compile Include="Supports\Utils.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
